k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gap-api-service
  namespace: muyung-anak-telyu
  labels:
    app: gap-api
spec:
  type: ClusterIP
  selector:
    app: gap-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
